// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`avg avg 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX qb: <http://purl.org/linked-data/cube#>
PREFIX dc11: <http://purl.org/dc/elements/1.1/>
PREFIX dcterms: <http://purl.org/dc/terms/>
PREFIX skos: <http://www.w3.org/2004/02/skos/core#>
SELECT ?raum ?raumLabel (AVG(?tmpVar3) AS ?bep) FROM <https://linked.opendata.swiss/graph/zh/statistics>
WHERE {
  ?observation rdf:type qb:Observation.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/RAUM> ?raum.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/ZEIT> ?tmpVar0.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/BTA> ?tmpVar1.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/SEX> ?tmpVar2.
  ?observation <https://ld.stadt-zuerich.ch/statistics/measure/BES> ?tmpVar3.
  ?observation qb:dataSet <https://ld.stadt-zuerich.ch/statistics/dataset/BES-RAUM-ZEIT-BTA-SEX>.
  OPTIONAL {
    ?raum (rdfs:label|skos:prefLabel) ?raumLabelLang.
    FILTER(((LANGMATCHES(LANG(?raumLabelLang), \\"de\\"^^xsd:string)) || (LANGMATCHES(LANG(?raumLabelLang), \\"it\\"^^xsd:string))) || ((LANG(?raumLabelLang)) = \\"\\"^^xsd:string))
  }
  BIND(COALESCE(?raumLabelLang, \\"\\"^^xsd:string) AS ?raumLabel)
}
GROUP BY (?raum) (?raumLabel)
LIMIT 10"
`;

exports[`avg avg and filter 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX qb: <http://purl.org/linked-data/cube#>
PREFIX dc11: <http://purl.org/dc/elements/1.1/>
PREFIX dcterms: <http://purl.org/dc/terms/>
PREFIX skos: <http://www.w3.org/2004/02/skos/core#>
SELECT ?raum ?raumLabel (AVG(?tmpVar3) AS ?bep) FROM <https://linked.opendata.swiss/graph/zh/statistics>
WHERE {
  ?observation rdf:type qb:Observation.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/RAUM> ?raum.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/ZEIT> ?tmpVar0.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/BTA> ?tmpVar1.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/SEX> ?tmpVar2.
  ?observation <https://ld.stadt-zuerich.ch/statistics/measure/BES> ?tmpVar3.
  ?observation qb:dataSet <https://ld.stadt-zuerich.ch/statistics/dataset/BES-RAUM-ZEIT-BTA-SEX>.
  OPTIONAL {
    ?raum (rdfs:label|skos:prefLabel) ?raumLabelLang.
    FILTER(((LANGMATCHES(LANG(?raumLabelLang), \\"de\\"^^xsd:string)) || (LANGMATCHES(LANG(?raumLabelLang), \\"it\\"^^xsd:string))) || ((LANG(?raumLabelLang)) = \\"\\"^^xsd:string))
  }
  BIND(COALESCE(?raumLabelLang, \\"\\"^^xsd:string) AS ?raumLabel)
  FILTER(?raum NOT IN(<http://foo>))
}
GROUP BY (?raum) (?raumLabel)
OFFSET 150
LIMIT 50"
`;

exports[`avg avg distinct 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX qb: <http://purl.org/linked-data/cube#>
PREFIX dc11: <http://purl.org/dc/elements/1.1/>
PREFIX dcterms: <http://purl.org/dc/terms/>
PREFIX skos: <http://www.w3.org/2004/02/skos/core#>
SELECT DISTINCT ?betriebsart ?betriebsartLabel ?geschlecht ?geschlechtLabel ?raum ?raumLabel ?zeit ?zeitLabel (AVG(DISTINCT ?tmpVar0) AS ?bep) ?quelle ?glossar ?fussnote ?datenstand ?erwarteteAktualisierung ?korrektur FROM <https://linked.opendata.swiss/graph/zh/statistics>
WHERE {
  ?observation rdf:type qb:Observation.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/BTA> ?betriebsart.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/SEX> ?geschlecht.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/RAUM> ?raum.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/ZEIT> ?zeit.
  ?observation <https://ld.stadt-zuerich.ch/statistics/measure/BES> ?tmpVar0.
  ?observation qb:dataSet <https://ld.stadt-zuerich.ch/statistics/dataset/BES-RAUM-ZEIT-BTA-SEX>.
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/QUELLE> ?quelle. }
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/GLOSSAR> ?glossar. }
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/FUSSNOTE> ?fussnote. }
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/DATENSTAND> ?datenstand. }
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/ERWARTETE_AKTUALISIERUNG> ?erwarteteAktualisierung. }
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/KORREKTUR> ?korrektur. }
  OPTIONAL {
    ?betriebsart (rdfs:label|skos:prefLabel) ?betriebsartLabelLang.
    FILTER(((LANGMATCHES(LANG(?betriebsartLabelLang), \\"de\\"^^xsd:string)) || (LANGMATCHES(LANG(?betriebsartLabelLang), \\"it\\"^^xsd:string))) || ((LANG(?betriebsartLabelLang)) = \\"\\"^^xsd:string))
  }
  BIND(COALESCE(?betriebsartLabelLang, \\"\\"^^xsd:string) AS ?betriebsartLabel)
  OPTIONAL {
    ?geschlecht (rdfs:label|skos:prefLabel) ?geschlechtLabelLang.
    FILTER(((LANGMATCHES(LANG(?geschlechtLabelLang), \\"de\\"^^xsd:string)) || (LANGMATCHES(LANG(?geschlechtLabelLang), \\"it\\"^^xsd:string))) || ((LANG(?geschlechtLabelLang)) = \\"\\"^^xsd:string))
  }
  BIND(COALESCE(?geschlechtLabelLang, \\"\\"^^xsd:string) AS ?geschlechtLabel)
  OPTIONAL {
    ?raum (rdfs:label|skos:prefLabel) ?raumLabelLang.
    FILTER(((LANGMATCHES(LANG(?raumLabelLang), \\"de\\"^^xsd:string)) || (LANGMATCHES(LANG(?raumLabelLang), \\"it\\"^^xsd:string))) || ((LANG(?raumLabelLang)) = \\"\\"^^xsd:string))
  }
  BIND(COALESCE(?raumLabelLang, \\"\\"^^xsd:string) AS ?raumLabel)
  OPTIONAL {
    ?zeit (rdfs:label|skos:prefLabel) ?zeitLabelLang.
    FILTER(((LANGMATCHES(LANG(?zeitLabelLang), \\"de\\"^^xsd:string)) || (LANGMATCHES(LANG(?zeitLabelLang), \\"it\\"^^xsd:string))) || ((LANG(?zeitLabelLang)) = \\"\\"^^xsd:string))
  }
  BIND(COALESCE(?zeitLabelLang, \\"\\"^^xsd:string) AS ?zeitLabel)
}
GROUP BY (?betriebsart) (?betriebsartLabel) (?geschlecht) (?geschlechtLabel) (?raum) (?raumLabel) (?zeit) (?zeitLabel) (?quelle) (?glossar) (?fussnote) (?datenstand) (?erwarteteAktualisierung) (?korrektur)
LIMIT 10"
`;

exports[`basic 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX qb: <http://purl.org/linked-data/cube#>
PREFIX dc11: <http://purl.org/dc/elements/1.1/>
PREFIX dcterms: <http://purl.org/dc/terms/>
PREFIX skos: <http://www.w3.org/2004/02/skos/core#>
SELECT ?betriebsart ?betriebsartLabel ?geschlecht ?geschlechtLabel ?raum ?raumLabel ?zeit ?zeitLabel ?bep ?quelle ?glossar ?fussnote ?datenstand ?erwarteteAktualisierung ?korrektur FROM <https://linked.opendata.swiss/graph/zh/statistics>
WHERE {
  ?observation rdf:type qb:Observation.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/BTA> ?betriebsart.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/SEX> ?geschlecht.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/RAUM> ?raum.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/ZEIT> ?zeit.
  ?observation <https://ld.stadt-zuerich.ch/statistics/measure/BES> ?bep.
  ?observation qb:dataSet <https://ld.stadt-zuerich.ch/statistics/dataset/BES-RAUM-ZEIT-BTA-SEX>.
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/QUELLE> ?quelle. }
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/GLOSSAR> ?glossar. }
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/FUSSNOTE> ?fussnote. }
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/DATENSTAND> ?datenstand. }
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/ERWARTETE_AKTUALISIERUNG> ?erwarteteAktualisierung. }
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/KORREKTUR> ?korrektur. }
  OPTIONAL {
    ?betriebsart (rdfs:label|skos:prefLabel) ?betriebsartLabelLang.
    FILTER(((LANGMATCHES(LANG(?betriebsartLabelLang), \\"de\\"^^xsd:string)) || (LANGMATCHES(LANG(?betriebsartLabelLang), \\"it\\"^^xsd:string))) || ((LANG(?betriebsartLabelLang)) = \\"\\"^^xsd:string))
  }
  BIND(COALESCE(?betriebsartLabelLang, \\"\\"^^xsd:string) AS ?betriebsartLabel)
  OPTIONAL {
    ?geschlecht (rdfs:label|skos:prefLabel) ?geschlechtLabelLang.
    FILTER(((LANGMATCHES(LANG(?geschlechtLabelLang), \\"de\\"^^xsd:string)) || (LANGMATCHES(LANG(?geschlechtLabelLang), \\"it\\"^^xsd:string))) || ((LANG(?geschlechtLabelLang)) = \\"\\"^^xsd:string))
  }
  BIND(COALESCE(?geschlechtLabelLang, \\"\\"^^xsd:string) AS ?geschlechtLabel)
  OPTIONAL {
    ?raum (rdfs:label|skos:prefLabel) ?raumLabelLang.
    FILTER(((LANGMATCHES(LANG(?raumLabelLang), \\"de\\"^^xsd:string)) || (LANGMATCHES(LANG(?raumLabelLang), \\"it\\"^^xsd:string))) || ((LANG(?raumLabelLang)) = \\"\\"^^xsd:string))
  }
  BIND(COALESCE(?raumLabelLang, \\"\\"^^xsd:string) AS ?raumLabel)
  OPTIONAL {
    ?zeit (rdfs:label|skos:prefLabel) ?zeitLabelLang.
    FILTER(((LANGMATCHES(LANG(?zeitLabelLang), \\"de\\"^^xsd:string)) || (LANGMATCHES(LANG(?zeitLabelLang), \\"it\\"^^xsd:string))) || ((LANG(?zeitLabelLang)) = \\"\\"^^xsd:string))
  }
  BIND(COALESCE(?zeitLabelLang, \\"\\"^^xsd:string) AS ?zeitLabel)
}
LIMIT 10"
`;

exports[`distinct 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX qb: <http://purl.org/linked-data/cube#>
PREFIX dc11: <http://purl.org/dc/elements/1.1/>
PREFIX dcterms: <http://purl.org/dc/terms/>
PREFIX skos: <http://www.w3.org/2004/02/skos/core#>
SELECT DISTINCT ?raum ?raumLabel FROM <https://linked.opendata.swiss/graph/zh/statistics>
WHERE {
  ?observation rdf:type qb:Observation.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/RAUM> ?raum.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/ZEIT> ?tmpVar0.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/BTA> ?tmpVar1.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/SEX> ?tmpVar2.
  ?observation qb:dataSet <https://ld.stadt-zuerich.ch/statistics/dataset/BES-RAUM-ZEIT-BTA-SEX>.
  OPTIONAL {
    ?raum (rdfs:label|skos:prefLabel) ?raumLabelLang.
    FILTER(((LANGMATCHES(LANG(?raumLabelLang), \\"de\\"^^xsd:string)) || (LANGMATCHES(LANG(?raumLabelLang), \\"it\\"^^xsd:string))) || ((LANG(?raumLabelLang)) = \\"\\"^^xsd:string))
  }
  BIND(COALESCE(?raumLabelLang, \\"\\"^^xsd:string) AS ?raumLabel)
}
LIMIT 10"
`;

exports[`empty select 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX qb: <http://purl.org/linked-data/cube#>
PREFIX dc11: <http://purl.org/dc/elements/1.1/>
PREFIX dcterms: <http://purl.org/dc/terms/>
PREFIX skos: <http://www.w3.org/2004/02/skos/core#>
SELECT ?tmpVar0 ?tmpVar1 ?tmpVar2 ?tmpVar3 FROM <https://linked.opendata.swiss/graph/zh/statistics>
WHERE {
  ?observation rdf:type qb:Observation.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/ZEIT> ?tmpVar0.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/RAUM> ?tmpVar1.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/BTA> ?tmpVar2.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/SEX> ?tmpVar3.
  ?observation qb:dataSet <https://ld.stadt-zuerich.ch/statistics/dataset/BES-RAUM-ZEIT-BTA-SEX>.
}
LIMIT 10"
`;

exports[`group and filter 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX qb: <http://purl.org/linked-data/cube#>
PREFIX dc11: <http://purl.org/dc/elements/1.1/>
PREFIX dcterms: <http://purl.org/dc/terms/>
PREFIX skos: <http://www.w3.org/2004/02/skos/core#>
SELECT ?betriebsart ?betriebsartLabel ?geschlecht ?geschlechtLabel ?raum ?raumLabel ?zeit ?zeitLabel ?bep ?quelle ?glossar ?fussnote FROM <https://linked.opendata.swiss/graph/zh/statistics>
WHERE {
  ?observation rdf:type qb:Observation.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/BTA> ?betriebsart.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/SEX> ?geschlecht.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/RAUM> ?raum.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/ZEIT> ?zeit.
  ?observation <https://ld.stadt-zuerich.ch/statistics/measure/BES> ?bep.
  ?observation qb:dataSet <https://ld.stadt-zuerich.ch/statistics/dataset/BES-RAUM-ZEIT-BTA-SEX>.
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/QUELLE> ?quelle. }
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/GLOSSAR> ?glossar. }
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/FUSSNOTE> ?fussnote. }
  OPTIONAL {
    ?betriebsart (rdfs:label|skos:prefLabel) ?betriebsartLabelLang.
    FILTER(((LANGMATCHES(LANG(?betriebsartLabelLang), \\"de\\"^^xsd:string)) || (LANGMATCHES(LANG(?betriebsartLabelLang), \\"it\\"^^xsd:string))) || ((LANG(?betriebsartLabelLang)) = \\"\\"^^xsd:string))
  }
  BIND(COALESCE(?betriebsartLabelLang, \\"\\"^^xsd:string) AS ?betriebsartLabel)
  OPTIONAL {
    ?geschlecht (rdfs:label|skos:prefLabel) ?geschlechtLabelLang.
    FILTER(((LANGMATCHES(LANG(?geschlechtLabelLang), \\"de\\"^^xsd:string)) || (LANGMATCHES(LANG(?geschlechtLabelLang), \\"it\\"^^xsd:string))) || ((LANG(?geschlechtLabelLang)) = \\"\\"^^xsd:string))
  }
  BIND(COALESCE(?geschlechtLabelLang, \\"\\"^^xsd:string) AS ?geschlechtLabel)
  OPTIONAL {
    ?raum (rdfs:label|skos:prefLabel) ?raumLabelLang.
    FILTER(((LANGMATCHES(LANG(?raumLabelLang), \\"de\\"^^xsd:string)) || (LANGMATCHES(LANG(?raumLabelLang), \\"it\\"^^xsd:string))) || ((LANG(?raumLabelLang)) = \\"\\"^^xsd:string))
  }
  BIND(COALESCE(?raumLabelLang, \\"\\"^^xsd:string) AS ?raumLabel)
  OPTIONAL {
    ?zeit (rdfs:label|skos:prefLabel) ?zeitLabelLang.
    FILTER(((LANGMATCHES(LANG(?zeitLabelLang), \\"de\\"^^xsd:string)) || (LANGMATCHES(LANG(?zeitLabelLang), \\"it\\"^^xsd:string))) || ((LANG(?zeitLabelLang)) = \\"\\"^^xsd:string))
  }
  BIND(COALESCE(?zeitLabelLang, \\"\\"^^xsd:string) AS ?zeitLabel)
  FILTER((?raum >= \\"12\\"^^xsd:string) && (?bep >= \\"12\\"^^xsd:string))
}
GROUP BY (?zeit) (?raum) (?betriebsart) (?betriebsartLabel) (?geschlecht) (?geschlechtLabel) (?raumLabel) (?zeitLabel) (?bep) (?quelle) (?glossar) (?fussnote)
LIMIT 10"
`;

exports[`groupBy doesn't duplicate 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX qb: <http://purl.org/linked-data/cube#>
PREFIX dc11: <http://purl.org/dc/elements/1.1/>
PREFIX dcterms: <http://purl.org/dc/terms/>
PREFIX skos: <http://www.w3.org/2004/02/skos/core#>
SELECT ?betriebsart ?betriebsartLabel ?geschlecht ?geschlechtLabel ?raum ?raumLabel ?zeit ?zeitLabel ?bep ?quelle ?glossar ?fussnote FROM <https://linked.opendata.swiss/graph/zh/statistics>
WHERE {
  ?observation rdf:type qb:Observation.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/BTA> ?betriebsart.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/SEX> ?geschlecht.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/RAUM> ?raum.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/ZEIT> ?zeit.
  ?observation <https://ld.stadt-zuerich.ch/statistics/measure/BES> ?bep.
  ?observation qb:dataSet <https://ld.stadt-zuerich.ch/statistics/dataset/BES-RAUM-ZEIT-BTA-SEX>.
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/QUELLE> ?quelle. }
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/GLOSSAR> ?glossar. }
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/FUSSNOTE> ?fussnote. }
  OPTIONAL {
    ?betriebsart (rdfs:label|skos:prefLabel) ?betriebsartLabelLang.
    FILTER(((LANGMATCHES(LANG(?betriebsartLabelLang), \\"de\\"^^xsd:string)) || (LANGMATCHES(LANG(?betriebsartLabelLang), \\"it\\"^^xsd:string))) || ((LANG(?betriebsartLabelLang)) = \\"\\"^^xsd:string))
  }
  BIND(COALESCE(?betriebsartLabelLang, \\"\\"^^xsd:string) AS ?betriebsartLabel)
  OPTIONAL {
    ?geschlecht (rdfs:label|skos:prefLabel) ?geschlechtLabelLang.
    FILTER(((LANGMATCHES(LANG(?geschlechtLabelLang), \\"de\\"^^xsd:string)) || (LANGMATCHES(LANG(?geschlechtLabelLang), \\"it\\"^^xsd:string))) || ((LANG(?geschlechtLabelLang)) = \\"\\"^^xsd:string))
  }
  BIND(COALESCE(?geschlechtLabelLang, \\"\\"^^xsd:string) AS ?geschlechtLabel)
  OPTIONAL {
    ?raum (rdfs:label|skos:prefLabel) ?raumLabelLang.
    FILTER(((LANGMATCHES(LANG(?raumLabelLang), \\"de\\"^^xsd:string)) || (LANGMATCHES(LANG(?raumLabelLang), \\"it\\"^^xsd:string))) || ((LANG(?raumLabelLang)) = \\"\\"^^xsd:string))
  }
  BIND(COALESCE(?raumLabelLang, \\"\\"^^xsd:string) AS ?raumLabel)
  OPTIONAL {
    ?zeit (rdfs:label|skos:prefLabel) ?zeitLabelLang.
    FILTER(((LANGMATCHES(LANG(?zeitLabelLang), \\"de\\"^^xsd:string)) || (LANGMATCHES(LANG(?zeitLabelLang), \\"it\\"^^xsd:string))) || ((LANG(?zeitLabelLang)) = \\"\\"^^xsd:string))
  }
  BIND(COALESCE(?zeitLabelLang, \\"\\"^^xsd:string) AS ?zeitLabel)
}
GROUP BY (?zeit) (?raum) (?betriebsart) (?betriebsartLabel) (?geschlecht) (?geschlechtLabel) (?raumLabel) (?zeitLabel) (?bep) (?quelle) (?glossar) (?fussnote)
LIMIT 10"
`;

exports[`groupBy groups with a function 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX qb: <http://purl.org/linked-data/cube#>
PREFIX dc11: <http://purl.org/dc/elements/1.1/>
PREFIX dcterms: <http://purl.org/dc/terms/>
PREFIX skos: <http://www.w3.org/2004/02/skos/core#>
SELECT ?betriebsart ?betriebsartLabel ?geschlecht ?geschlechtLabel ?raum ?raumLabel ?zeit ?zeitLabel ?bep ?quelle ?glossar ?fussnote FROM <https://linked.opendata.swiss/graph/zh/statistics>
WHERE {
  ?observation rdf:type qb:Observation.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/BTA> ?betriebsart.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/SEX> ?geschlecht.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/RAUM> ?raum.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/ZEIT> ?zeit.
  ?observation <https://ld.stadt-zuerich.ch/statistics/measure/BES> ?bep.
  ?observation qb:dataSet <https://ld.stadt-zuerich.ch/statistics/dataset/BES-RAUM-ZEIT-BTA-SEX>.
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/QUELLE> ?quelle. }
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/GLOSSAR> ?glossar. }
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/FUSSNOTE> ?fussnote. }
  OPTIONAL {
    ?betriebsart (rdfs:label|skos:prefLabel) ?betriebsartLabelLang.
    FILTER(((LANGMATCHES(LANG(?betriebsartLabelLang), \\"de\\"^^xsd:string)) || (LANGMATCHES(LANG(?betriebsartLabelLang), \\"it\\"^^xsd:string))) || ((LANG(?betriebsartLabelLang)) = \\"\\"^^xsd:string))
  }
  BIND(COALESCE(?betriebsartLabelLang, \\"\\"^^xsd:string) AS ?betriebsartLabel)
  OPTIONAL {
    ?geschlecht (rdfs:label|skos:prefLabel) ?geschlechtLabelLang.
    FILTER(((LANGMATCHES(LANG(?geschlechtLabelLang), \\"de\\"^^xsd:string)) || (LANGMATCHES(LANG(?geschlechtLabelLang), \\"it\\"^^xsd:string))) || ((LANG(?geschlechtLabelLang)) = \\"\\"^^xsd:string))
  }
  BIND(COALESCE(?geschlechtLabelLang, \\"\\"^^xsd:string) AS ?geschlechtLabel)
  OPTIONAL {
    ?raum (rdfs:label|skos:prefLabel) ?raumLabelLang.
    FILTER(((LANGMATCHES(LANG(?raumLabelLang), \\"de\\"^^xsd:string)) || (LANGMATCHES(LANG(?raumLabelLang), \\"it\\"^^xsd:string))) || ((LANG(?raumLabelLang)) = \\"\\"^^xsd:string))
  }
  BIND(COALESCE(?raumLabelLang, \\"\\"^^xsd:string) AS ?raumLabel)
  OPTIONAL {
    ?zeit (rdfs:label|skos:prefLabel) ?zeitLabelLang.
    FILTER(((LANGMATCHES(LANG(?zeitLabelLang), \\"de\\"^^xsd:string)) || (LANGMATCHES(LANG(?zeitLabelLang), \\"it\\"^^xsd:string))) || ((LANG(?zeitLabelLang)) = \\"\\"^^xsd:string))
  }
  BIND(COALESCE(?zeitLabelLang, \\"\\"^^xsd:string) AS ?zeitLabel)
}
GROUP BY (?zeit) (?raum) (?betriebsart) (?betriebsartLabel) (?geschlecht) (?geschlechtLabel) (?raumLabel) (?zeitLabel) (?bep) (?quelle) (?glossar) (?fussnote)
LIMIT 10"
`;

exports[`groupBy with avg doesn't duplicate groupby vars 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX qb: <http://purl.org/linked-data/cube#>
PREFIX dc11: <http://purl.org/dc/elements/1.1/>
PREFIX dcterms: <http://purl.org/dc/terms/>
PREFIX skos: <http://www.w3.org/2004/02/skos/core#>
SELECT DISTINCT ?raum ?raumLabel ?zeit ?zeitLabel (AVG(DISTINCT ?tmpVar2) AS ?bep) FROM <https://linked.opendata.swiss/graph/zh/statistics>
WHERE {
  ?observation rdf:type qb:Observation.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/RAUM> ?raum.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/ZEIT> ?zeit.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/BTA> ?tmpVar0.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/SEX> ?tmpVar1.
  ?observation <https://ld.stadt-zuerich.ch/statistics/measure/BES> ?tmpVar2.
  ?observation qb:dataSet <https://ld.stadt-zuerich.ch/statistics/dataset/BES-RAUM-ZEIT-BTA-SEX>.
  OPTIONAL {
    ?raum (rdfs:label|skos:prefLabel) ?raumLabelLang.
    FILTER(((LANGMATCHES(LANG(?raumLabelLang), \\"de\\"^^xsd:string)) || (LANGMATCHES(LANG(?raumLabelLang), \\"it\\"^^xsd:string))) || ((LANG(?raumLabelLang)) = \\"\\"^^xsd:string))
  }
  BIND(COALESCE(?raumLabelLang, \\"\\"^^xsd:string) AS ?raumLabel)
  OPTIONAL {
    ?zeit (rdfs:label|skos:prefLabel) ?zeitLabelLang.
    FILTER(((LANGMATCHES(LANG(?zeitLabelLang), \\"de\\"^^xsd:string)) || (LANGMATCHES(LANG(?zeitLabelLang), \\"it\\"^^xsd:string))) || ((LANG(?zeitLabelLang)) = \\"\\"^^xsd:string))
  }
  BIND(COALESCE(?zeitLabelLang, \\"\\"^^xsd:string) AS ?zeitLabel)
  FILTER(?raum = <http://something/R3000>)
}
GROUP BY (?raum) (?raumLabel) (?zeit) (?zeitLabel)
LIMIT 10"
`;

exports[`handles languages one language 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX qb: <http://purl.org/linked-data/cube#>
PREFIX dc11: <http://purl.org/dc/elements/1.1/>
PREFIX dcterms: <http://purl.org/dc/terms/>
PREFIX skos: <http://www.w3.org/2004/02/skos/core#>
SELECT ?zeit ?zeitLabel ?tmpVar0 ?tmpVar1 ?tmpVar2 ?bep ?quelle FROM <https://linked.opendata.swiss/graph/zh/statistics>
WHERE {
  ?observation rdf:type qb:Observation.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/ZEIT> ?zeit.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/RAUM> ?tmpVar0.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/BTA> ?tmpVar1.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/SEX> ?tmpVar2.
  ?observation <https://ld.stadt-zuerich.ch/statistics/measure/BES> ?bep.
  ?observation qb:dataSet <https://ld.stadt-zuerich.ch/statistics/dataset/BES-RAUM-ZEIT-BTA-SEX>.
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/QUELLE> ?quelle. }
  OPTIONAL {
    ?zeit (rdfs:label|skos:prefLabel) ?zeitLabelLang.
    FILTER((LANGMATCHES(LANG(?zeitLabelLang), \\"en\\"^^xsd:string)) || ((LANG(?zeitLabelLang)) = \\"\\"^^xsd:string))
  }
  BIND(COALESCE(?zeitLabelLang, \\"\\"^^xsd:string) AS ?zeitLabel)
}
LIMIT 10"
`;

exports[`handles languages three languages 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX qb: <http://purl.org/linked-data/cube#>
PREFIX dc11: <http://purl.org/dc/elements/1.1/>
PREFIX dcterms: <http://purl.org/dc/terms/>
PREFIX skos: <http://www.w3.org/2004/02/skos/core#>
SELECT ?zeit ?zeitLabel ?tmpVar0 ?tmpVar1 ?tmpVar2 ?bep ?quelle FROM <https://linked.opendata.swiss/graph/zh/statistics>
WHERE {
  ?observation rdf:type qb:Observation.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/ZEIT> ?zeit.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/RAUM> ?tmpVar0.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/BTA> ?tmpVar1.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/SEX> ?tmpVar2.
  ?observation <https://ld.stadt-zuerich.ch/statistics/measure/BES> ?bep.
  ?observation qb:dataSet <https://ld.stadt-zuerich.ch/statistics/dataset/BES-RAUM-ZEIT-BTA-SEX>.
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/QUELLE> ?quelle. }
  OPTIONAL {
    ?zeit (rdfs:label|skos:prefLabel) ?zeitLabelLang.
    FILTER((((LANGMATCHES(LANG(?zeitLabelLang), \\"fr\\"^^xsd:string)) || (LANGMATCHES(LANG(?zeitLabelLang), \\"de\\"^^xsd:string))) || (LANGMATCHES(LANG(?zeitLabelLang), \\"it\\"^^xsd:string))) || ((LANG(?zeitLabelLang)) = \\"\\"^^xsd:string))
  }
  BIND(COALESCE(?zeitLabelLang, \\"\\"^^xsd:string) AS ?zeitLabel)
}
LIMIT 10"
`;

exports[`handles languages two languages 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX qb: <http://purl.org/linked-data/cube#>
PREFIX dc11: <http://purl.org/dc/elements/1.1/>
PREFIX dcterms: <http://purl.org/dc/terms/>
PREFIX skos: <http://www.w3.org/2004/02/skos/core#>
SELECT ?zeit ?zeitLabel ?tmpVar0 ?tmpVar1 ?tmpVar2 ?bep ?quelle FROM <https://linked.opendata.swiss/graph/zh/statistics>
WHERE {
  ?observation rdf:type qb:Observation.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/ZEIT> ?zeit.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/RAUM> ?tmpVar0.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/BTA> ?tmpVar1.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/SEX> ?tmpVar2.
  ?observation <https://ld.stadt-zuerich.ch/statistics/measure/BES> ?bep.
  ?observation qb:dataSet <https://ld.stadt-zuerich.ch/statistics/dataset/BES-RAUM-ZEIT-BTA-SEX>.
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/QUELLE> ?quelle. }
  OPTIONAL {
    ?zeit (rdfs:label|skos:prefLabel) ?zeitLabelLang.
    FILTER(((LANGMATCHES(LANG(?zeitLabelLang), \\"en\\"^^xsd:string)) || (LANGMATCHES(LANG(?zeitLabelLang), \\"de\\"^^xsd:string))) || ((LANG(?zeitLabelLang)) = \\"\\"^^xsd:string))
  }
  BIND(COALESCE(?zeitLabelLang, \\"\\"^^xsd:string) AS ?zeitLabel)
}
LIMIT 10"
`;

exports[`ordering group and filter 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX qb: <http://purl.org/linked-data/cube#>
PREFIX dc11: <http://purl.org/dc/elements/1.1/>
PREFIX dcterms: <http://purl.org/dc/terms/>
PREFIX skos: <http://www.w3.org/2004/02/skos/core#>
SELECT ?betriebsart ?betriebsartLabel ?geschlecht ?geschlechtLabel ?raum ?raumLabel ?zeit ?zeitLabel ?bep ?quelle ?glossar ?fussnote FROM <https://linked.opendata.swiss/graph/zh/statistics>
WHERE {
  ?observation rdf:type qb:Observation.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/BTA> ?betriebsart.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/SEX> ?geschlecht.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/RAUM> ?raum.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/ZEIT> ?zeit.
  ?observation <https://ld.stadt-zuerich.ch/statistics/measure/BES> ?bep.
  ?observation qb:dataSet <https://ld.stadt-zuerich.ch/statistics/dataset/BES-RAUM-ZEIT-BTA-SEX>.
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/QUELLE> ?quelle. }
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/GLOSSAR> ?glossar. }
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/FUSSNOTE> ?fussnote. }
  OPTIONAL {
    ?betriebsart (rdfs:label|skos:prefLabel) ?betriebsartLabelLang.
    FILTER(((LANGMATCHES(LANG(?betriebsartLabelLang), \\"de\\"^^xsd:string)) || (LANGMATCHES(LANG(?betriebsartLabelLang), \\"it\\"^^xsd:string))) || ((LANG(?betriebsartLabelLang)) = \\"\\"^^xsd:string))
  }
  BIND(COALESCE(?betriebsartLabelLang, \\"\\"^^xsd:string) AS ?betriebsartLabel)
  OPTIONAL {
    ?geschlecht (rdfs:label|skos:prefLabel) ?geschlechtLabelLang.
    FILTER(((LANGMATCHES(LANG(?geschlechtLabelLang), \\"de\\"^^xsd:string)) || (LANGMATCHES(LANG(?geschlechtLabelLang), \\"it\\"^^xsd:string))) || ((LANG(?geschlechtLabelLang)) = \\"\\"^^xsd:string))
  }
  BIND(COALESCE(?geschlechtLabelLang, \\"\\"^^xsd:string) AS ?geschlechtLabel)
  OPTIONAL {
    ?raum (rdfs:label|skos:prefLabel) ?raumLabelLang.
    FILTER(((LANGMATCHES(LANG(?raumLabelLang), \\"de\\"^^xsd:string)) || (LANGMATCHES(LANG(?raumLabelLang), \\"it\\"^^xsd:string))) || ((LANG(?raumLabelLang)) = \\"\\"^^xsd:string))
  }
  BIND(COALESCE(?raumLabelLang, \\"\\"^^xsd:string) AS ?raumLabel)
  OPTIONAL {
    ?zeit (rdfs:label|skos:prefLabel) ?zeitLabelLang.
    FILTER(((LANGMATCHES(LANG(?zeitLabelLang), \\"de\\"^^xsd:string)) || (LANGMATCHES(LANG(?zeitLabelLang), \\"it\\"^^xsd:string))) || ((LANG(?zeitLabelLang)) = \\"\\"^^xsd:string))
  }
  BIND(COALESCE(?zeitLabelLang, \\"\\"^^xsd:string) AS ?zeitLabel)
  FILTER((?raum >= \\"12\\"^^xsd:string) && (?bep >= \\"12\\"^^xsd:string))
}
GROUP BY (?zeit) (?raum) (?betriebsart) (?betriebsartLabel) (?geschlecht) (?geschlechtLabel) (?raumLabel) (?zeitLabel) (?bep) (?quelle) (?glossar) (?fussnote)
ORDER BY DESC (?quelle) (?raum)
LIMIT 10"
`;
